--- a/week_5/styles.css
+++ b/week_5/styles.css
@@ -27,6 +27,19 @@ h3 {
 }
 
 .jumbotron {
-  background-color: #320b0b;
+  background-color: black;
   color: white;
+  text-align: center;
+}
+
+img {
+  height: 300px;
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  img {
+    height: 200px;
+    width: 100%;
+  }
 }
